# s3-simple-artifact-handler

./: .gitignore  Cargo.toml  default-config.toml  docker-compose.yaml  readme.md
.github/workflows/: release.yaml
src/: lib.rs  main.rs  utils.rs
