[package]
name = "s3-simple-artifact-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
tokio =  { version = "1.39.2", features = ["full"] }
tar = "0.4.41"
glob = "0.3.1"
flate2 = "1.0.20"
rust-s3 = "0.34.0"
tokio-stream = "0.1.15"
aws-region = "0.25.4"
aws-creds = "0.37.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
