[package]
name = "s3-simple-artifact-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
tar = "0.4.41"
glob = "0.3.1"
flate2 = "1.0.20"
toml = "0.8.19"
serde = "1.0.207"
reqwest = {version="0.12.7", features=["rustls-tls", "blocking"], default-features = false}
rusty-s3 = "0.5.0"
env_logger = "0.11.5"
chrono = "0.4.38"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
